--- a/site/public/styles/global.css
+++ b/site/public/styles/global.css
@@ -45,12 +45,10 @@ h1 {
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 h2 {
-  margin-top: 1.5rem;
   padding-bottom: 0;
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 0.75rem;
   color: inherit;
   font-family: 'Cabin', 'Helvetica Neue', 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
   font-weight: 500;
@@ -63,7 +61,6 @@ h3 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.125rem;
   color: inherit;
   font-family: 'Cabin', 'Helvetica Neue', 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
   font-weight: 500;
@@ -76,7 +73,6 @@ h4 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.125rem;
   color: inherit;
   font-family: 'Cabin', 'Helvetica Neue', 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
   font-weight: 500;
@@ -89,7 +85,6 @@ h5 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.125rem;
   color: inherit;
   font-family: 'Cabin', 'Helvetica Neue', 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
   font-weight: 500;
@@ -102,7 +97,6 @@ h6 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.125rem;
   color: inherit;
   font-family: 'Cabin', 'Helvetica Neue', 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
   font-weight: 500;
@@ -111,18 +105,33 @@ h6 {
   line-height: 1.1;
 }
 
+:is(h1, h2, h3, h4, h5, h6) {
+  text-wrap: balance;
+  margin-block: 2em 0.5em;
+
+  /* Prevent excessive space between direct heading siblings. */
+  & + & {
+    margin-block-start: 0;
+  }
+}
+
+/* First heading on the page should neatly align to the top */
+h1:first-of-type {
+  margin-block-start: 0;
+}
+
 ul,
 ol {
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
   padding-bottom: 0;
-  padding-left: 0;
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.125rem;
-  list-style-position: outside;
-  list-style-image: none;
+
+  /* https://piccalil.li/blog/an-in-depth-guide-to-customising-lists-with-css/ */
+  padding-left: 1lh;
 }
 
 p {
@@ -131,6 +140,7 @@ p {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.125rem;
+  text-wrap: pretty;
 }
 figure {
   padding-bottom: 0;
@@ -202,12 +212,10 @@ li {
 ol li,
 ul li {
   padding-left: 0;
-  list-style-position: inside;
 }
 
 li > ul,
 li > ol {
-  margin-left: 1.5rem;
   margin-bottom: calc(1.125rem / 2);
   margin-top: calc(1.125rem / 2);
 }
